   + You can now set a background image with various repeat and stretch options, which will be shown in the background of the editor wherever it is not obscured by tiles, biomes or border, and wherever the Void layer is painted
   + The background colour (visible wherever not obscured by tiles, biomes, border and/or background image) can be changed

-- Version 2.2.6, released 25-10-2016

 * Bug fix: the scaling of height maps was reversed; this has now been fixed
 * Some other fixes and improvements have been applied to the height map import process

-- Version 2.2.5, released 23-10-2016

 * A new Info panel has been added, which displays more details about the block beneath the cursor than are already displayed on the status bar. Among other things, it shows a list of all the layers present on that block, and their intensities. It also shows the high resolution (16-bit) block height. It is behind the existing Brush Settings panel in the lower right corner of the window by default
 * A function has been added for deleting layers which are not in use. It is located in the Edit menu as "Delete unused layers...". By default it selects all unused layers, but you can deselect any layers you want to keep before deletion. Note that if you unpaint all traces of a layer from the dimension manually it does not count as unused until you save and load the world, or you use the Global Operations tool to remove the layer (which is easier and more efficient than manually unpainting it)
 * It is no longer possible to manually provide Minecraft jars when WorldPainter needs one, for example to calculate biomes for the Biomes Viewer. WorldPainter needs an installed copy of Minecraft, of a supported version and in the default location, in order to be able to display biomes or load saved structures