@@ -5,6 +5,8 @@
    + The painting of the border can be turned off
    + You can now set a background image with various repeat and stretch options, which will be shown in the background of the editor wherever it is not obscured by tiles, biomes or border, and wherever the Void layer is painted
    + The background colour (visible wherever not obscured by tiles, biomes, border and/or background image) can be changed
+ * Custom objects which would extend below the bottom, or above the top of the map, are no longer exported
+ * Bug fix: fix an error in the logic for supporting sand with sandstone which would result in the wrong kind of sandstone, and occasionally cause errors
 
 -- Version 2.2.6, released 25-10-2016
 
